[package]
authors = ["Jannik Schmied <jannik.schmied@pm.me>"]
description = "Library for CAN connection and security testing"
name = "libcanconnect"
edition = "2021"
version = "0.1.0"
readme = "README.md"
keywords = ["CAN", "CAN-Bus", "CAN-Security", "CAN-Connect", "CAN-Connect-Library"]
license = "GNU General Public License v3.0"
license-file = "LICENSE"

[dependencies]
socketcan = "1.7.0"
regex = "1.6.0"
sudo = "0.6.0"
ctrlc = "3.2.3"
